Reenable the 'use auto property' lightbulb.
A couple of changes have been made here.  We no longer implement this feature as a
'compilation end' analyzer.  Instead, it's a 'symbol analyzer'.  This should ideally
mean that the results it produces are available much quicker since we don't have to
wait for the compiltion analysis to end.

Previously this was a compilation analyzer because we wanted to also analyze all
usages to see if switching to an auto-prop would break things.  Now we eagerly
detect that you can convert to an auto prop, but we defer the conflict check
to when you try to apply the feature (like we do for "inline temp").

--- a/src/Features/Core/Portable/Features.csproj
+++ b/src/Features/Core/Portable/Features.csproj
@@ -535,6 +535,7 @@
     <Compile Include="SpellCheck\AbstractSpellCheckCodeFixProvider.cs" />
     <Compile Include="UseAutoProperty\AbstractUseAutoPropertyCodeFixProvider.cs" />
     <Compile Include="UseAutoProperty\AbstractUseAutoPropertyAnalyzer.cs" />
+    <Compile Include="UseAutoProperty\IUseAutoPropertyService.cs" />
     <Compile Include="Workspace\BackgroundCompiler.cs" />
     <Compile Include="Workspace\BackgroundParser.cs" />
   </ItemGroup>
