--- a/src/Samples/VisualBasic/FormatSolution/project.lock.json
+++ b/src/Samples/VisualBasic/FormatSolution/project.lock.json
@@ -3,7 +3,7 @@
   "version": 1,
   "targets": {
     ".NETFramework,Version=v4.5.2": {},
-    ".NETFramework,Version=v4.5.2/win-anycpu": {}
+    ".NETFramework,Version=v4.5.2/win7-anycpu": {}
   },
   "libraries": {},
   "projectFileDependencyGroups": {
