Update our binding redirects to specify CodeBase attributes, sometimes
Previously, our binding redirects were never specifying CodeBase
attributes, and relying on us being added to the BindingPath via
pkgdef. Unfortunately this mechanism doesn't work reliably if there
are other conflicting binaries in PrivateAssemblies, and so we should
specify CodeBase attributes whenever we're not producing a VSIX
that is being embedded in our shipping MSI.

Rather than update each of our ProvideBindingRedirectionAttribute
uses with another condition, I've replaced them all with a new attribute
that specifies the (indentical) values in one place. This is just for
ease of code maintenance rather than some technical necessity.

--- a/src/VisualStudio/Setup/VisualStudioSetup.csproj
+++ b/src/VisualStudio/Setup/VisualStudioSetup.csproj
@@ -189,6 +189,7 @@
     <Content Include="BindingPath.pkgdef">
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Compile Include="ProvideRoslynBindingRedirection.cs" />
   </ItemGroup>
   <ImportGroup Label="Targets">
     <Import Project="..\..\..\build\Targets\VSL.Imports.targets" />
