--- a/src/Compilers/CSharp/CscCore/project.json
+++ b/src/Compilers/CSharp/CscCore/project.json
@@ -24,6 +24,7 @@
     "System.Runtime.Handles": "4.0.1-beta-23401",
     "System.Runtime.InteropServices": "4.0.21-beta-23401",
     "System.Runtime.Loader": "4.0.0-beta-23401",
+    "System.Runtime.Numerics": "4.0.1-beta-23401",
     "System.Runtime.Serialization.Json": "4.0.1-beta-23401",
     "System.Security.Cryptography.Algorithms": "4.0.0-beta-23401",
     "System.Text.Encoding": "4.0.11-beta-23401",
