--- a/src/Scripting/Core/Scripting.csproj
+++ b/src/Scripting/Core/Scripting.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Hosting\Resolvers\NuGetPackageResolver.cs" />
     <Compile Include="Hosting\SearchPaths.cs" />
     <Compile Include="Hosting\SynchronizedList.cs" />
+    <Compile Include="ScriptMetadataResolver.cs" />
     <Compile Include="ScriptCompiler.cs" />
     <Compile Include="ScriptingResources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -96,9 +97,11 @@
     <Compile Include="Hosting\ObjectFormatter\ObjectFormattingOptions.cs" />
     <Compile Include="ScriptExecutionState.cs" />
     <Compile Include="ScriptOptions.cs" />
+    <Compile Include="ScriptSourceResolver.cs" />
     <Compile Include="ScriptState.cs" />
     <Compile Include="ScriptVariable.cs" />
     <Compile Include="Utilities\IListExtensions.cs" />
+    <Compile Include="Utilities\ParameterValidationHelpers.cs" />
     <Compile Include="Utilities\TaskExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
