--- a/src/Tools/Source/CompilerGeneratorTools/Source/CSharpSyntaxGenerator/project.json
+++ b/src/Tools/Source/CompilerGeneratorTools/Source/CSharpSyntaxGenerator/project.json
@@ -1,10 +1,24 @@
 {
-  "dependencies": {},
+  "dependencies": {
+    "Microsoft.NETCore.Platforms": "1.0.1-beta-23401",
+    "System.Runtime": "4.0.21-beta-23409",
+    "System.Console": "4.0.0-beta-23401",
+    "System.Collections": "4.0.11-beta-23409",
+    "System.Runtime.Serialization.Xml": "4.0.10-beta-22231",
+    "System.Collections.Immutable": "1.1.37",
+    "System.Linq": "4.0.1-beta-23409",
+    "System.Reflection": "4.1.0-beta-23409",
+    "System.Reflection.Primitives": "4.0.1-beta-23409",
+    "System.Xml.XmlDocument": "4.0.1-beta-23409",
+    "System.Xml.XmlSerializer": "4.0.11-beta-23409"
+  },
   "frameworks": {
-    "net45": {}
+    "dnxcore50": {
+      "imports": "portable-net452"
+    }
   },
   "runtimes": {
-    "win7-anycpu": { },
-    "ubuntu.14.04-anycpu": { }
+    "win7-x64": { },
+    "ubuntu.14.04-x64": { }
   }
 }
