Public API changes recommended by the design team for the new Analyzer/Supression APIs.
- CompilationWithAnalyzerOptions should be sealed
- CompilationWithAnalyzerOptions.AnalyzerOptions should be renamed Options
- SuppressionInfo should be sealed
- AnalyzerTelemetry API changes as per [this](https://github.com/dotnet/roslyn/issues/5974#issuecomment-149987997) comment.

There are no functionality changes here.

Fixes #6044

--- a/src/Compilers/Core/Portable/CodeAnalysis.csproj
+++ b/src/Compilers/Core/Portable/CodeAnalysis.csproj
@@ -153,7 +153,7 @@
     <Compile Include="DiagnosticAnalyzer\AnalysisState.StateKind.cs" />
     <Compile Include="DiagnosticAnalyzer\AnalysisState.SyntaxReferenceAnalyzerStateData.cs" />
     <Compile Include="DiagnosticAnalyzer\AnalyzerTelemetry.cs" />
-    <Compile Include="DiagnosticAnalyzer\AnalyzerTelemetry.ActionCounts.cs" />
+    <Compile Include="DiagnosticAnalyzer\AnalyzerActionCounts.cs" />
     <Compile Include="DiagnosticAnalyzer\AnalyzerExecutor.cs" />
     <Compile Include="DiagnosticAnalyzer\AnalyzerManager.AnalyzerAndOptions.cs" />
     <Compile Include="DiagnosticAnalyzer\AnalyzerManager.cs" />
